# TheOne

./: ANALYSIS_AND_PRIORITIES.md  AVST_PLUGIN_SYSTEM.md  DRUM_PAD_FIXES.md  MIDI_TASK_1_SUMMARY.md  README.md  build.gradle.kts  debug_screen_fixes.md  run-tests.ps1  settings.gradle.kts  test_audio_loading.md  test_sequencer_audio.md  verify_midi_implementation.kt
.github/workflows/: codeql.yml
.kiro/specs/audio-engine-foundation/: design.md  requirements.md
.kiro/specs/basic-sampling-pad-playback/: design.md  requirements.md  tasks.md
.kiro/specs/compact-main-ui/: design.md  requirements.md  tasks.md
.kiro/specs/midi-engine-foundation/: design.md  requirements.md  tasks.md
.kiro/specs/step-sequencer/: design.md  requirements.md  tasks.md
.kiro/specs/ui-integration-polish/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
app/: build.gradle.kts
app/src/androidTest/java/com/high/theone/: CustomTestRunner.kt  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/drum_kits/funk_legends/: kit.json
app/src/main/assets/drum_kits/hip_hop_legends/: kit.json
app/src/main/assets/drum_kits/jazz_brush_kit/: kit.json
app/src/main/assets/drum_kits/lofi_vintage/: kit.json
app/src/main/assets/drum_kits/natural_room/: kit.json
app/src/main/assets/drum_kits/trap_808_king/: kit.json
app/src/main/assets/drum_kits/uk_garage/: kit.json
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  AudioEngineTests.cpp  CMakeLists.txt  EnvelopeGenerator.cpp  EnvelopeGenerator.h  EnvelopeGeneratorTests.cpp  LfoGenerator.cpp  LfoGenerator.h  PadSettings.h  SequenceCpp.h  StateVariableFilter.cpp  StateVariableFilter.h  SynthEngine.cpp  SynthEngine.h  audio_sample.h  dr_wav.h  native-lib.cpp
app/src/main/cpp/audioengine/: audio_engine.cpp  audio_engine.h
app/src/main/cpp/avst/: AvstAudioIO.h  AvstParameter.cpp  AvstParameter.h  AvstParameterContainer.cpp  AvstParameterContainer.h  IAvstPlugin.cpp  IAvstPlugin.h  SketchingSynth.cpp  SketchingSynth.h
app/src/main/java/com/example/theone/audio/: AudioEngine.kt  AudioEngineControl.kt  SampleMetadata.kt
app/src/main/java/com/example/theone/audioengine/: AudioEngineControl.kt
app/src/main/java/com/example/theone/commands/: Command.kt  UndoRedoManager.kt
app/src/main/java/com/example/theone/di/: DomainModule.kt
app/src/main/java/com/example/theone/domain/: ProjectManager.kt
app/src/main/java/com/example/theone/features/debug/: DebugScreen.kt
app/src/main/java/com/example/theone/model/: LayerModels.kt  ProjectModels.kt  SampleExtensions.kt  SampleModels.kt  SequenceModels.kt  SharedModels.kt  SynthModels.kt
app/src/main/java/com/example/theone/project/: ProjectManager.kt
app/src/main/java/com/high/theone/: MainActivity.kt  TheOneApplication.kt
app/src/main/java/com/high/theone/audio/: AudioEngine.kt  AudioEngineControl.kt  AudioEngineControl.kt.backup  AudioEngineImpl.kt  MicrophoneInput.kt  MicrophoneInputImpl.kt
app/src/main/java/com/high/theone/commands/: Command.kt  UndoRedoManager.kt
app/src/main/java/com/high/theone/di/: AudioEngineModule.kt  CompactUIModule.kt  DomainModule.kt  ErrorHandlingModule.kt  LayoutModule.kt  MicrophoneModule.kt  MidiModule.kt  MidiServiceModule.kt  MidiUiModule.kt  PadSystemIntegrationModule.kt  PatternRepositoryModule.kt  ProjectManagerModule.kt  RecordingPerformanceModule.kt  SampleRepositoryModule.kt  SequencerModule.kt  ViewModelModule.kt
app/src/main/java/com/high/theone/domain/: Error.kt  PatternRepository.kt  ProjectManager.kt  Result.kt  SampleRepository.kt
app/src/main/java/com/high/theone/midi/: MidiError.kt  MidiManager.kt  MidiManagerControl.kt  MidiMessageParser.kt  MidiValidator.kt
app/src/main/java/com/high/theone/model/: CompactUIModels.kt  LayerModels.kt  Project.kt  ProjectModels.kt  SampleMetadata.kt  SampleModels.kt  SamplingModels.kt  SequenceModels.kt  SharedModels.kt  SynthModels.kt
app/src/main/java/com/high/theone/project/: PatternRepositoryImpl.kt  ProjectManager.kt  ProjectManagerImpl.kt  SampleRepositoryImpl.kt
app/src/main/res/values/: themes.xml
app/src/test/cpp/: AudioEngineTests.cpp  EnvelopeGeneratorTests.cpp
app/src/test/java/com/example/theone/audio/: AudioEngineTest.kt
app/src/test/java/com/example/theone/audioengine/: AudioEngineControlImplTest.kt
app/src/test/java/com/example/theone/domain/: ProjectManagerImplTest.kt  ProjectManagerTest.kt
app/src/test/java/com/high/theone/: ExampleUnitTest.kt
app/src/test/java/com/high/theone/audio/: AudioEngineTest.kt  MicrophoneInputTest.kt  RecordingIntegrationTest.kt  RecordingSystemBehaviorTest.kt  RecordingSystemTest.kt
app/src/test/java/com/high/theone/di/: MidiDependencyInjectionTest.kt
app/src/test/java/com/high/theone/domain/: ProjectManagerTest.kt
app/src/test/java/com/high/theone/integration/: MidiAppIntegrationTest.kt
app/src/test/java/com/high/theone/midi/: MidiMessageParserTest.kt  MidiValidatorTest.kt
app/src/test/java/com/high/theone/model/: SampleMetadataTest.kt  SamplingModelsTest.kt
app/src/test/java/com/high/theone/project/: SamplePersistenceTest.kt  SampleRepositoryImplTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
temp_sequencer_backup/: SequencerSettingsScreen.kt  SequencerViewModel.kt
(+281 files in other folders)
